// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoEntityFound tests when errorObj is not passed in props 1`] = `
<div>
  <div
    class="noPipelineFoundContainer"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--flex-alignItems-center"
    >
      <img
        class="noPipelineFoundImage"
        src="test-file-stub"
      />
      <p
        class="StyledProps--font StyledProps--main noPipelineFound StyledProps--margin-top-medium StyledProps--margin-bottom-small"
      >
        <span>
          pipeline.gitExperience.noEntityFound
        </span>
      </p>
      <p
        class="StyledProps--font StyledProps--main selectDiffBranch StyledProps--margin-top-xsmall StyledProps--margin-bottom-xlarge"
      >
        pipeline.gitExperience.selectDiffBranch
      </p>
      <div
        class="wrapper normalInputStyle"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--margin-right-small"
          data-icon="git-new-branch"
        >
          <svg
            height="16"
            viewBox="0 0 13 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="bp3-form-group branchSelector branchSelector"
          >
            
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-popover-wrapper Select--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="remoteBranch"
                      placeholder="- select -"
                      style="padding-right: 0px;"
                      type="text"
                      value="feature"
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoEntityFound tests when errorObj is passed and it has responseMessages 1`] = `
<div>
  <div
    class="noPipelineFoundContainer"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--flex-alignItems-center"
    >
      <div
        class="Layout--vertical StyledProps--main container shrink errorHandler StyledProps--background-red100 StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--padding-left-medium StyledProps--padding-right-medium"
      >
        <div
          class="StyledProps--font StyledProps--main scroll"
        >
          <div
            class="Layout--vertical StyledProps--main shrink"
          >
            <div
              class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
            >
              <span
                class="StyledProps--font StyledProps--main text StyledProps--font-weight-bold StyledProps--color StyledProps--color-red700 StyledProps--inline"
              >
                File not found
              </span>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--margin-right-small"
                data-icon="info"
              >
                <svg
                  height="16"
                  viewBox="0 0 12 12"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="Layout--vertical StyledProps--main errorListTextContainer shrink"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-black StyledProps--margin-bottom-xsmall"
                >
                  common.errorHandler.issueCouldBe
                </p>
                <div
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  <span
                    class="StyledProps--font StyledProps--main text StyledProps--color StyledProps--color-black StyledProps--font-size-small StyledProps--inline"
                  >
                    - The requested file path doesn't exist in git. Possible reasons can be:
1. The requested file path doesn't exist for given branch and repo
2. The given branch or repo is invalid
                  </span>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
            >
              <span
                class="bp3-icon bp3-icon-lightbulb StyledProps--main StyledProps--margin-right-small"
                icon="lightbulb"
              >
                <svg
                  data-icon="lightbulb"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    lightbulb
                  </desc>
                  <path
                    d="M9.01 14h-2c-.55 0-1 .45-1 1s.45 1 1 1h2c.55 0 1-.45 1-1s-.44-1-1-1zm1-3h-4c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1s-.44-1-1-1zm-2-11C5.26 0 3.03 1.95 3.03 4.35c0 2.37 1.63 2.64 1.94 5.22 0 .24.22.44.5.44h5.09c.28 0 .5-.19.5-.44C11.37 6.99 13 6.72 13 4.35 13 1.95 10.77 0 8.01 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="Layout--vertical StyledProps--main errorListTextContainer shrink"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-black StyledProps--margin-bottom-xsmall"
                >
                  common.errorHandler.tryTheseSuggestions
                </p>
                <div
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  <span
                    class="StyledProps--font StyledProps--main text StyledProps--color StyledProps--color-black StyledProps--font-size-small StyledProps--inline"
                  >
                    - Please check the requested file path / branch / Github repo name if they exist or not.
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <img
        class="noPipelineFoundImage"
        src="test-file-stub"
      />
      <p
        class="StyledProps--font StyledProps--main noPipelineFound StyledProps--margin-top-medium StyledProps--margin-bottom-small"
      >
        <span>
          pipeline.gitExperience.noEntityFound
        </span>
      </p>
      <p
        class="StyledProps--font StyledProps--main selectDiffBranch StyledProps--margin-top-xsmall StyledProps--margin-bottom-xlarge"
      >
        pipeline.gitExperience.selectDiffBranch
      </p>
      <div
        class="wrapper normalInputStyle"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--margin-right-small"
          data-icon="git-new-branch"
        >
          <svg
            height="16"
            viewBox="0 0 13 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="bp3-form-group branchSelector branchSelector"
          >
            
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-popover-wrapper Select--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="remoteBranch"
                      placeholder="- select -"
                      style="padding-right: 0px;"
                      type="text"
                      value="feature"
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoEntityFound tests when errorObj is passed but it does not have responseMessages 1`] = `
<div>
  <div
    class="noPipelineFoundContainer"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--flex-alignItems-center"
    >
      <img
        class="noPipelineFoundImage"
        src="test-file-stub"
      />
      <p
        class="StyledProps--font StyledProps--main noPipelineFound StyledProps--margin-top-medium StyledProps--margin-bottom-small"
      >
        <span>
          pipeline.gitExperience.noEntityFound
        </span>
      </p>
      <p
        class="StyledProps--font StyledProps--main selectDiffBranch StyledProps--margin-top-xsmall StyledProps--margin-bottom-xlarge"
      >
        pipeline.gitExperience.selectDiffBranch
      </p>
      <div
        class="wrapper normalInputStyle"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--margin-right-small"
          data-icon="git-new-branch"
        >
          <svg
            height="16"
            viewBox="0 0 13 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="bp3-form-group branchSelector branchSelector"
          >
            
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-popover-wrapper Select--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="remoteBranch"
                      placeholder="- select -"
                      style="padding-right: 0px;"
                      type="text"
                      value="feature"
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoEntityFound tests when isGitSyncEnabled is true 1`] = `
<div>
  <div
    class="noPipelineFoundContainer"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--flex-alignItems-center"
    >
      <div
        class="Layout--vertical StyledProps--main container shrink errorHandler StyledProps--background-red100 StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--padding-left-medium StyledProps--padding-right-medium"
      >
        <div
          class="StyledProps--font StyledProps--main scroll"
        >
          <div
            class="Layout--vertical StyledProps--main shrink"
          >
            <div
              class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
            >
              <span
                class="StyledProps--font StyledProps--main text StyledProps--font-weight-bold StyledProps--color StyledProps--color-red700 StyledProps--inline"
              >
                File not found
              </span>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--margin-right-small"
                data-icon="info"
              >
                <svg
                  height="16"
                  viewBox="0 0 12 12"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="Layout--vertical StyledProps--main errorListTextContainer shrink"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-black StyledProps--margin-bottom-xsmall"
                >
                  common.errorHandler.issueCouldBe
                </p>
                <div
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  <span
                    class="StyledProps--font StyledProps--main text StyledProps--color StyledProps--color-black StyledProps--font-size-small StyledProps--inline"
                  >
                    - The requested file path doesn't exist in git. Possible reasons can be:
1. The requested file path doesn't exist for given branch and repo
2. The given branch or repo is invalid
                  </span>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
            >
              <span
                class="bp3-icon bp3-icon-lightbulb StyledProps--main StyledProps--margin-right-small"
                icon="lightbulb"
              >
                <svg
                  data-icon="lightbulb"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    lightbulb
                  </desc>
                  <path
                    d="M9.01 14h-2c-.55 0-1 .45-1 1s.45 1 1 1h2c.55 0 1-.45 1-1s-.44-1-1-1zm1-3h-4c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1s-.44-1-1-1zm-2-11C5.26 0 3.03 1.95 3.03 4.35c0 2.37 1.63 2.64 1.94 5.22 0 .24.22.44.5.44h5.09c.28 0 .5-.19.5-.44C11.37 6.99 13 6.72 13 4.35 13 1.95 10.77 0 8.01 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="Layout--vertical StyledProps--main errorListTextContainer shrink"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-black StyledProps--margin-bottom-xsmall"
                >
                  common.errorHandler.tryTheseSuggestions
                </p>
                <div
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  <span
                    class="StyledProps--font StyledProps--main text StyledProps--color StyledProps--color-black StyledProps--font-size-small StyledProps--inline"
                  >
                    - Please check the requested file path / branch / Github repo name if they exist or not.
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <img
        class="noPipelineFoundImage"
        src="test-file-stub"
      />
      <p
        class="StyledProps--font StyledProps--main noPipelineFound StyledProps--margin-top-medium StyledProps--margin-bottom-small"
      >
        <span>
          pipeline.gitExperience.noEntityFound
        </span>
      </p>
      <p
        class="StyledProps--font StyledProps--main selectDiffBranch StyledProps--margin-top-xsmall StyledProps--margin-bottom-xlarge"
      >
        pipeline.gitExperience.selectDiffBranch
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main gitFilterContainer StyledProps--margin-right-small"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--padding-top-small StyledProps--margin-left-large StyledProps--color StyledProps--color-grey600"
          data-icon="git-new-branch"
        >
          <svg
            height="16"
            viewBox="0 0 13 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          class="bp3-popover-wrapper branchSelector Select--main bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="branch"
                placeholder="- Select -"
                style="padding-right: 0px;"
                type="text"
                value="feature"
              />
              <span
                class="bp3-input-action"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
